--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,16 @@ h2{
     margin-top: 28px;
 }
 
+#color-value {
+    min-width: 100px;
+}
+
+#inset {
+    align-self: start;
+    height: 20px;
+    width: 20px;
+}
+
 #box{
     width: 100%;
     height: 300px;
@@ -101,4 +111,33 @@ h2{
     margin: 0 auto;
     border: 2px solid #e9d60a;
     padding: 1rem;
+    transition: .4s;
+    cursor: pointer;
+}
+
+#rules-area:hover{
+    background-color: #dfdfdf;
+}
+
+@media (max-width:450px){
+   
+    #box-shadow-generator{
+        flex-direction: column;
+    }
+   
+    #controls-container, #preview {
+        padding: 1rem 2rem;
+    }
+
+    #box {
+        width: 60%;
+        height: 200px;
+        margin: 0 auto;
+    }
+
+    #generated-rule {
+        margin-top: 3rem;
+    }
+
+    
 }
